# ragbench-gcpl-hackathon

./: .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt  submission_ready.tex
data/eval/: questions.json
data/raw/: chunking_strategies.md  evaluation_design.md  hybrid_search.md  rag_fundamentals.md  reranking.md  vector_search.md
src/ragbench/: __init__.py  __main__.py  chunking.py  cli.py  dataset.py  embeddings.py  evaluation.py  export_pdf.py  generation.py  reranking.py  retrieval.py  types.py
