[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbench"
version = "0.1.0"
description = "Option B hackathon prototype: RAG with retrieval benchmarking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0",
  "openai>=1.40",
  "rich>=13.7",
  "reportlab>=4.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
